[gd_scene load_steps=5 format=2]

[ext_resource path="res://classes/Gameplay.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/mixkit-retro-arcade-game-over-470.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/lineClear.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/impactWood_heavy_001.ogg" type="AudioStream" id=4]

[node name="Gameplay" type="Node"]
script = ExtResource( 1 )

[node name="BoardTicker" type="Timer" parent="."]

[node name="LockInShape" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="LineClear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[connection signal="timeout" from="BoardTicker" to="." method="_on_BoardTicker_timeout"]
